<resources>
    <string name="app_name">CoffeeTracker</string>

    <string name="drink">I drank a coffee!</string>
    <string name="settings">Settings</string>
    <string name="short_commands">Commands</string>
    <string name="map">Coffee Map</string>
    <string name="statistics">Coffee Statistic</string>
    <string name="table">Coffee Table</string>
    <string name="stud_course">MobPro</string>
    <string name="drink_coffee_info">Press Button if you drank a coffee</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <plurals name="coffee_drink_toast">
        <item quantity="zero">Locations stored.\n You gained %d experience points.</item>
        <item quantity="one">Locations stored.\n You gained %d experience point.</item>
        <item quantity="many">Locations stored.\n You gained %d experience points.</item>
        <item quantity="other">Locations stored.\n You gained %d experience points.</item>
    </plurals>

    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>

    <string name="delete_location_button">Delete Locations</string>
    <string name="delete_experience_button">Delete Experience</string>
    <string name="delete_everything_button">Delete Everything</string>

    <string name="delete_location_question">All stored location will be erased.\nAre you sure?</string>
    <string name="delete_experience_question">All your earned experience will be erased.\nAre you sure?</string>
    <string name="delete_everything_question">Your experience and locations will be erased.\nAre you sure?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
</resources>