<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_start"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/app_name" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/map" />
        <item
            android:id="@+id/nav_table"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/table" />
        <item
            android:id="@+id/nav_statistic"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/statistics" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/settings" />
    </group>

    <item android:title="@string/short_commands">
        <menu>
            <item
                android:id="@+id/nav_drink"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/drink" />
           <!-- <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_share"
                android:title="Send" />-->
        </menu>
    </item>

</menu>
